Fix alignment, put overrides on the class

--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -22,6 +22,11 @@
 }
 
 .event {
+  --column-gap: 0.7ch;
+  --panel-border-radius: 0.7em;
+  --panel-padding: 0.6em;
+  --panel-size: auto; 
+
   margin: var(--inline-space);
 }
 
